# tauri-vue-template

./: .gitignore  .traerules  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json
.github/workflows/: ci.yml  release.yml
.kiro/specs/chrome-cookie-reader/: design.md  requirements.md  tasks.md
.kiro/steering/: tauri-vue-development.md
.trae/steering/: tauri-vue-development.md
docs/: 卡密校验接口客户端调用说明.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/cookie/: mod.rs  reader.rs
src/components/: LoginModal.vue  ThemeSelector.vue  ToastContainer.vue
src/composables/: useToast.ts
src/config/: app.config.ts
src/core/: index.ts
src/core/components/: ThemeSelector.vue  ToastContainer.vue  index.ts
src/core/composables/: index.ts  useLogger.ts  useTheme.ts
src/core/stores/: index.ts
src/modules/auth/: index.ts
src/modules/auth/components/: LoginModal.vue
src/modules/auth/stores/: auth.ts
src/modules/cookie/: index.ts
src/modules/cookie/stores/: cookie.ts
src/modules/cookie/views/: CookieReader.vue
src/modules/demo/: index.ts
src/modules/demo/views/: Animation.vue  Demo.vue  Hooks.vue  Icons.vue
src/modules/screen/: index.ts
src/modules/screen/views/: ScreenContent.vue  ScreenWindow.vue
src/router/: index.ts
src/stores/: app.ts  auth.ts
src/types/: index.ts
src/views/: Animation.vue  CookieReader.vue  Demo.vue  Home.vue  Hooks.vue  Icons.vue  ScreenContent.vue  ScreenWindow.vue
