[package]
name = "tauri-vue-template"
version = "0.1.0"
description = "Tauri + Vue + DaisyUI 项目模板"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_vue_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
