[package]
name = "jd-create-aiword-screen"
version = "0.0.1"
description = "京东新建直播间+AI话术+投屏软件"
authors = ["BluerAngala <new-ai@foxmail.com>"]
edition = "2021"

[lib]
name = "tauri_vue_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
hostname = "0.4"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"
urlencoding = "2.1"
