[package]
name = "tauri-vue-template"
version = "0.1.0"
description = "Tauri + Vue + DaisyUI 模板项目"
authors = ["BluerAngala <new-ai@foxmail.com>"]
edition = "2021"

[lib]
name = "tauri_vue_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# === 核心依赖（必须保留）===
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# === 认证模块依赖 ===
dirs = "5.0"
hostname = "0.4"

# === Cookie 模块依赖（不需要可注释）===
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"

# === 投屏模块依赖（不需要可注释）===
urlencoding = "2.1"
